--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-  "botToken": [ "YOUR_TOKEN_HERE", "if you want multiple accounts, put any other tokens here" ],
+  "botToken": [ "NzAyMzY3MzQ4NDE3MzY0MDU5.X8hvFQ.Ewzw9hQ9Hv192OvNTOTFzt88xfQ", "if you want multiple accounts, put any other tokens here" ],
   "prefix": "/"
 }
